@@ -142,38 +142,38 @@ typedef enum {
 } pslr_raw_format_t;
 
 typedef enum {
-    PSLR_EXPOSURE_SUBMODE_NONE,
-    PSLR_EXPOSURE_SUBMODE_HISPEED,
-    PSLR_EXPOSURE_SUBMODE_DOF,
-    PSLR_EXPOSURE_SUBMODE_MTF,
-    PSLR_EXPOSURE_SUBMODE_STANDARD,
-    PSLR_EXPOSURE_SUBMODE_PORTRAIT,
-    PSLR_EXPOSURE_SUBMODE_LANDSCAPE,
-    PSLR_EXPOSURE_SUBMODE_MACRO,
-    PSLR_EXPOSURE_SUBMODE_SPORT,
-    PSLR_EXPOSURE_SUBMODE_NIGHTSCENEPORTRAIT,
-    PSLR_EXPOSURE_SUBMODE_NOFLASH,
-    PSLR_EXPOSURE_SUBMODE_NIGHTSCENE,
-    PSLR_EXPOSURE_SUBMODE_SURFANDSNOW,
-    PSLR_EXPOSURE_SUBMODE_TEXT,
-    PSLR_EXPOSURE_SUBMODE_SUNSET,
-    PSLR_EXPOSURE_SUBMODE_KIDS,
-    PSLR_EXPOSURE_SUBMODE_PET,
-    PSLR_EXPOSURE_SUBMODE_CANDLELIGHT,
-    PSLR_EXPOSURE_SUBMODE_MUSEUM,
-    PSLR_EXPOSURE_SUBMODE_19,
-    PSLR_EXPOSURE_SUBMODE_FOOD,
-    PSLR_EXPOSURE_SUBMODE_STAGE,
-    PSLR_EXPOSURE_SUBMODE_NIGHTSNAP,
-    PSLR_EXPOSURE_SUBMODE_SWALLOWDOF,
-    PSLR_EXPOSURE_SUBMODE_24,
-    PSLR_EXPOSURE_SUBMODE_NIGHTSCENEHDR,
-    PSLR_EXPOSURE_SUBMODE_BLUESKY,
-    PSLR_EXPOSURE_SUBMODE_FOREST,
-    PSLR_EXPOSURE_SUBMODE_28,
-    PSLR_EXPOSURE_SUBMODE_BLACKLIGHTSILHOUETTE,
-    PSLR_EXPOSURE_SUBMODE_MAX
-} pslr_exposure_submode_t;
+    PSLR_SCENE_MODE_NONE,
+    PSLR_SCENE_MODE_HISPEED,
+    PSLR_SCENE_MODE_DOF,
+    PSLR_SCENE_MODE_MTF,
+    PSLR_SCENE_MODE_STANDARD,
+    PSLR_SCENE_MODE_PORTRAIT,
+    PSLR_SCENE_MODE_LANDSCAPE,
+    PSLR_SCENE_MODE_MACRO,
+    PSLR_SCENE_MODE_SPORT,
+    PSLR_SCENE_MODE_NIGHTSCENEPORTRAIT,
+    PSLR_SCENE_MODE_NOFLASH,
+    PSLR_SCENE_MODE_NIGHTSCENE,
+    PSLR_SCENE_MODE_SURFANDSNOW,
+    PSLR_SCENE_MODE_TEXT,
+    PSLR_SCENE_MODE_SUNSET,
+    PSLR_SCENE_MODE_KIDS,
+    PSLR_SCENE_MODE_PET,
+    PSLR_SCENE_MODE_CANDLELIGHT,
+    PSLR_SCENE_MODE_MUSEUM,
+    PSLR_SCENE_MODE_19,
+    PSLR_SCENE_MODE_FOOD,
+    PSLR_SCENE_MODE_STAGE,
+    PSLR_SCENE_MODE_NIGHTSNAP,
+    PSLR_SCENE_MODE_SWALLOWDOF,
+    PSLR_SCENE_MODE_24,
+    PSLR_SCENE_MODE_NIGHTSCENEHDR,
+    PSLR_SCENE_MODE_BLUESKY,
+    PSLR_SCENE_MODE_FOREST,
+    PSLR_SCENE_MODE_28,
+    PSLR_SCENE_MODE_BLACKLIGHTSILHOUETTE,
+    PSLR_SCENE_MODE_MAX
+} pslr_scene_mode_t;
 
 int str_comparison_i (const char *s1, const char *s2, int n);
 int find_in_array( const char** array, int length, char* str );
@@ -209,6 +209,6 @@ const char *get_pslr_image_format_str( pslr_image_format_t value );
 
 const char *get_pslr_raw_format_str( pslr_raw_format_t value );
 
-const char *get_pslr_exposure_submode_str( pslr_exposure_submode_t value );
+const char *get_pslr_scene_mode_str( pslr_scene_mode_t value );
 
 #endif
