@@ -18,6 +18,7 @@ version 0.84.03
 	--read_firmware_version
 	Fixing incorrectly recognized exposure submodes
 	Handling new exposure submodes: Forest, NightSceneHDR, BacklightSilhouette, BlueSky
+	Renaming exposure submode to scene mode
 
 version 0.84.02 ( 2016-10-31 )
 	Android code cleanup
